--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😸</text></svg>">
   </head>
   <body>
 <div id="instructions">
@@ -22,24 +23,23 @@
 <div id="snuggles">
   <img src="https://freesvg.org/img/1521156606.png" alt="Snuggles" width="300">
 </div>
-<h2 id="winLose">Find snuggles!</h2>
+      <h2 id="win-lose">Please find snuggles!</h2>
   <table>
     <tr>
-      <td id="1" onclick="catGame(1)">?</td>
-      <td id="2" onclick="catGame(2)">?</td>
-      <td id="3" onclick="catGame(3)">?</td>
+      <td id="0" onclick="catGame(0)">🌲</td>
+      <td id="1" onclick="catGame(1)">💐</td>
+      <td id="2" onclick="catGame(2)">🌹</td>
     </tr>
   <tr>
-      <td id="4" onclick="catGame(4)">?</td>
-      <td id="5" onclick="catGame(5)">?</td>
-      <td id="6" onclick="catGame(6)">?</td>
+      <td id="3" onclick="catGame(3)">🌻</td>
+      <td id="4" onclick="catGame(4)">🚅</td>
+      <td id="5" onclick="catGame(5)">🛢</td>
   </tr>
   <tr>
-      <td id="7" onclick="catGame(7)">?</td>
-      <td id="8" onclick="catGame(8)">?</td>
-      <td id="9" onclick="catGame(9)">?</td>
+      <td id="6" onclick="catGame(6)">🥀</td>
+      <td id="7" onclick="catGame(7)">🏠</td>
+      <td id="8" onclick="catGame(8)">🚘</td>
   </tr>
-
   </table>
   <script type="text/javascript" src="treasurehunt.js"></script>
   </body>
